# doc_panic_checker

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: ast_walker.rs  dir_walker.rs  main.rs
