[package]
name = "doc_panic_checker"
version = "0.1.0"
authors = ["Daniel McKenna <daniel@emotech.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.26", features = ["span-locations"]}
quote = "1.0.9"
structopt = "0.3.21"
syn = { version = "1.0", features = ["parsing"]}
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
walkdir = "2.3.2"
